--- a/src/databaseconnection/GUI.form
+++ b/src/databaseconnection/GUI.form
@@ -129,9 +129,6 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JTextField" name="hostTextField">
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="hostTextFieldActionPerformed"/>
-      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="portTextField">
       <Properties>
@@ -193,7 +190,7 @@
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="executeTextFieldActionPerformed"/>
+        <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="executeTextFieldKeyPressed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton2">
